2007-07-25  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/wms.xml:
	  Copying and pasting a bug doesn't make it go away: bool, not
	  boolean.

2007-07-25  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/asfparse.py:
	* flumotion/component/producers/wms/wms.py:
	* flumotion/component/producers/wms/wms.xml:
	  Add (temporary) emergency hack to ignore keyframe flags in the
	  stream. Hopefully allows audio-only streams that are incorrectly
	  marked to work.

2007-07-25  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/wmv/Makefile.am:
	  Actually dist the UI files so the manager starts up correctly.

2007-07-24  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/asfparse.py:
	  If your gstreamer version is too old, raise an exception.

	* flumotion/component/producers/wms/wms.py:
	  Add a private version of pad monitoring code that works for
	  platform-3 version. 

2007-07-24  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/wms.py:
	  Use the pad monitor functionality added to trunk to watch that
	  we're receiving data from the windows media encoder. Turn hungry if
	  we don't.

2007-05-25  Michael Smith <msmith@fluendo.com>

	* flumotion/component/producers/wms/wms.py:
	  Sergio points out that backoff all the way to one hour is a bit
	  much. So, try to reconnect at least every 5 minutes.

2007-05-18  Julien MOUTTE  <julien@moutte.net>

	* flumotion/component/encoders/wmv/admin_gtk.py:
	* flumotion/component/encoders/wmv/wmv.glade:
	* flumotion/component/encoders/wmv/wmv.py:
	* flumotion/component/encoders/wmv/wmv.xml: Make the WMV
	encoder autodiscover available GStreamer plug-ins and report
	errors to the admin UI. Implement a GTK UI for knowing which
	encoder is in use and additional informations about it's
	configuration.

2007-05-09  Thomas Vander Stichele  <thomas at apestaart dot org>
